bk_ida/gobmkida/g0/owl_determine_life
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/owl_determine_life/src/engine/owl.c:2934:26: error: use of undeclared identifier 'unk_4DB1CE'
reason = ( const char *)&unk_4DB1CE; 
                         ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/owl_determine_life/src/obj/1/owl.o] Error 1
